package tp2.clases.exceptions;

public class InvalidNumberOfChosenChoicesException extends RuntimeException {}
